# serializer version: 1
# name: EditUserInfoViewTest.test_edit_without_title[missing title warning with phone and address]
  '''
  <div class="alert alert-warning" id="missing-infos-warning" role="status">
                                  <div class="row">
                                      <div class="col-auto pe-0">
                                          <i class="ri-information-line ri-xl text-warning"></i>
                                      </div>
                                      <div class="col">
                                          <p class="mb-2">
                                              <strong>Informations manquantes</strong>
                                          </p>
                                          <p>Une ou plusieurs informations de votre profil sont nécessaires pour utiliser votre espace candidat.</p>
                                          <p class="mb-0">
                                              Les champs suivants ne sont pas renseignés :
                                              </p><ul>




                                                          <li>
                                                              <strong>Civilité</strong>
                                                          </li>









                                                          <li>
                                                              <strong>Téléphone</strong>
                                                          </li>



                                                          <li>
                                                              <strong>Adresse</strong>
                                                          </li>




















=======




                                                          <li>
                                                              <strong>Civilité</strong>
                                                          </li>













                                                          <li>
                                                              <strong>Téléphone</strong>
                                                          </li>



                                                          <li>
                                                              <strong>Adresse</strong>
                                                          </li>






















>>>>>>> 2819cab62 (Fix dashboard tests)
                                              </ul>
                                          <p></p>
                                      </div>
                                  </div>
                              </div>
  '''
# ---
# name: EditUserInfoViewTest.test_edit_without_title[missing title warning without phone and with birthdate]
  '''
  <div class="alert alert-warning" id="missing-infos-warning" role="status">
                                  <div class="row">
                                      <div class="col-auto pe-0">
                                          <i class="ri-information-line ri-xl text-warning"></i>
                                      </div>
                                      <div class="col">
                                          <p class="mb-2">
                                              <strong>Informations manquantes</strong>
                                          </p>
                                          <p>Une ou plusieurs informations de votre profil sont nécessaires pour utiliser votre espace candidat.</p>
                                          <p class="mb-0">
                                              Les champs suivants ne sont pas renseignés :
                                              </p><ul>
<<<<<<< HEAD




                                                          <li>
                                                              <strong>Civilité</strong>
                                                          </li>







                                                          <li>
                                                              <strong>Date de naissance</strong>
                                                          </li>
























=======




                                                          <li>
                                                              <strong>Civilité</strong>
                                                          </li>











                                                          <li>
                                                              <strong>Date de naissance</strong>
                                                          </li>


























>>>>>>> 2819cab62 (Fix dashboard tests)
                                              </ul>
                                          <p></p>
                                      </div>
                                  </div>
                              </div>
  '''
# ---
# name: EditUserInfoViewTest.test_update_address[user address input]
  '<input autocomplete="off" class="js-address-autocomplete-input form-control" data-autocomplete-source-url="https://api-adresse.data.gouv.fr/search/" data-autosubmit-on-enter-pressed="0" id="id_address_for_autocomplete" name="address_for_autocomplete" placeholder="16, rue Eric Tabarly" required="" type="text" value="10 Rue du Moulin du Gue, 35400 Saint-Malo"/>'
# ---
